phase 4 init
